--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -2,10 +2,10 @@ name: Go
 on:
   push:
     branches:
-    - master
+    - main
   pull_request:
     branches:
-    - master
+    - main
     
 jobs:
 
@@ -14,10 +14,10 @@ jobs:
     name: Running Go Tests
     runs-on: ubuntu-latest
     steps:
-    - name: Set up Go 1.15
+    - name: Set up Go '1.21.1'
       uses: actions/setup-go@v1
       with:
-        go-version: 1.15
+        go-version: '1.21.1'
       id: go
 
     - name: Check out code into the Go module directory
